--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
 </head>
 <body>
 
-  <div id="container"></div>
+  <div id="container">
+    <h1>Find Github Users!</h1>
+    <form action="">
+      <h3>Who is it that you would like to find?</h3>
+      <input type="text" name="username">
+      <button></button>
+    </form>
+
+    <div id="users-template">
+
+    </div>
+  </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
